# opensource_voicebot

./: CLAUDE.md  DEPLOYMENT_STATUS.md  MLFLOW_SETUP.md  app.py  pyproject.toml
client/: package-lock.json  package.json
client/src/components/: app.tsx
server/bot/: moe_and_dal_bot.py
server/bot/assets/: modal_docs.md  modal_docs_short.md
server/bot/processors/: modal_rag.py  parser.py
server/bot/services/: modal_openai_service.py  modal_parakeet_service.py  modal_services.py
server/llm/: sglang_server.py  vllm_server.py
server/llm/tests/: test_streaming_json_parser.py
server/observability/: instrumentation.py  judge_evaluator.py  metrics.py  mlflow_client.py  mlflow_server.py  trace_context.py
server/stt/: parakeet_stt.py
server/tts/: kokoro_tts.py
utils/: resize_images.py
