[project]
name = "open-source-voice-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "huggingface-hub>=1.3.1",
    "llama-index>=0.14.12",
    "loguru>=0.7.3",
    "mlflow>=3.8.1",
    "modal==1.2.1",
    "pillow>=12.1.0",
    "pipecat>=0.3.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.14.11",
]
