[project]
name = "open-source-voice-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "huggingface-hub>=0.34.0,<1.0",
    "llama-index>=0.14.12",
    "llama-index-embeddings-openvino>=0.6.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "loguru>=0.7.3",
    "mlflow>=3.8.1",
    "modal==1.2.1",
    "pipecat-ai[local-smart-turn,noisereduce,openai,silero,soundfile,webrtc]==0.0.92",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.14.11",
    "sentence-transformers>=5.2.0",
    "typer>=0.20.0",
]
